Refactor playcount and more